--- a/btc_html/css/small.css
+++ b/btc_html/css/small.css
@@ -285,11 +285,6 @@ body h3 {
 }
 
 
-.header-container{
-	display: flex;
-	justify-content: space-between;
-}
-
 .img-txt-container-header {
 	display: flex;
 	align-items: center;
@@ -577,7 +572,7 @@ a{text-decoration:none;color:#FFFFFF;}
 
 :root{
 	--primary-color:rgba(13,110,139,0.75);
-	--overlay-color:rgba(11,54,81,.8);
+	--overlay-color:rgba(11,54,81,1);
 	--menu-speed:0.75s;
 }
 
@@ -601,8 +596,8 @@ a{text-decoration:none;color:#FFFFFF;}
 	right:0;
 	z-index:2;
 	cursor:pointer;
-	width:50px;
-	height:50px;
+	width:100px;
+	height:100px;
 	opacity:0;
 }
 
@@ -611,10 +606,10 @@ a{text-decoration:none;color:#FFFFFF;}
 	top:0;
 	right:0;
 	z-index:1;
-	width:60px;
-	height:60px;
-	padding:1rem;
-	background:var(--primary-color);
+	width:100px;
+	height:100px;
+	padding:2rem;
+	background:none;
 	display:flex;
 	align-items:center;
 	justify-content:center;
@@ -624,7 +619,7 @@ a{text-decoration:none;color:#FFFFFF;}
 .menu-wrap .hamburger>div{
 	position:relative;
 	width:100%;
-	height:2px;
+	height:3px;
 	background-color:#fff;
 	display:flex;
 	align-items:center;
@@ -639,7 +634,7 @@ a{text-decoration:none;color:#FFFFFF;}
 	z-index:1;
 	top:-10px;
 	width:100%;
-	height: 2px;
+	height: 3px;
 	background:inherit;
 }
 
